--- a/public/style.css
+++ b/public/style.css
@@ -18,3 +18,17 @@ form {
 textarea {
   resize: none;
 }
+
+.card {
+  width: 100%;
+  height: 10em;
+
+  border-radius: 0.5em;
+  border-width: 2px;
+  border-style: solid;
+  border-color: #ccc;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
